# quickstart-policies

./: .env  .gitignore  README.md  REFERENCE.md  newton-provider.wit  ofac-kyc.js  persona-kyc.js  quickstart-demo.js  test.js
KYC/: policy.rego  policy_cids.json  policy_data_metadata.json  policy_metadata.json
OFAC/: ofac.js  policy.rego  policy_cids.json  policy_data_metadata.json  policy_metadata.json
OFAC_KYC/: ofac-kyc.js  policy.rego  policy_metadata.json
human.tech/: human.tech.js  intent.json  params_schema.json  policy.rego  policy_cids.json  policy_data_metadata.json  policy_metadata.json  policy_params_data.json  sample_data.json  wasm_args.json
ofac-hardcoded-demo/: ofac-hardcoded-data.js  ofac_hardcoded_data.js  policy.rego  policy_cids.json  policy_data_metadata.json  policy_metadata.json
policies/KYC/: params_schema.json  policy.rego
policies/OFAC/: params_schema.json
policy-data/quickstart-policy-data/: policy_data_metadata.json
policy-examples/farcaster-user-data/: README.md  demo_payload.json
policy-examples/persona-kyc-demo/: demo_payload.json  newton-provider.wit
policy-examples/vaults-fyi/: README.md  demo_payload.json
policy-examples/vaults-fyi/server/: README.md  (+3 more)
policy-examples/veriff-id-verification/policy-data-implementation/: Cargo.toml
policy-examples/veriff-id-verification/policy-data-implementation/src/: api_agent.rs  lib.rs
policy-files/: intent.json  kyc.js  params_schema.json  policy.rego  policy_cids.json  policy_data_metadata.json  policy_metadata.json  policy_params_data.json  quickstart-demo.js  wasm_args.json
(+64 files in other folders)
